[gd_scene load_steps=9 format=3 uid="uid://bks8p1urlqgax"]

[ext_resource type="Script" path="res://src/attack/attack_preview.gd" id="1_bcmmq"]
[ext_resource type="Theme" uid="uid://c21dhy264y6ty" path="res://assets/theme_large.tres" id="1_nispc"]
[ext_resource type="Texture2D" uid="uid://c0mxwj13dwpml" path="res://assets/custom/PurpleMana.png" id="2_jpcgr"]
[ext_resource type="PackedScene" uid="uid://cxg7equ52kyde" path="res://src/fortune/fortune_hover.tscn" id="3_wpjb7"]
[ext_resource type="Texture2D" uid="uid://cgmg6rhf832w0" path="res://assets/custom/BlightAttack.png" id="4_vip4o"]
[ext_resource type="Texture2D" uid="uid://brhx5tlxxd0hh" path="res://assets/custom/BlightParticle.png" id="5_30kqw"]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_yfc77"]
particles_animation = true
particles_anim_h_frames = 7
particles_anim_v_frames = 1
particles_anim_loop = false

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_dgk4v"]
particle_flag_disable_z = true
emission_shape_offset = Vector3(107, 0, 0)
emission_shape = 3
emission_box_extents = Vector3(107, 1, 1)
angle_min = -720.0
direction = Vector3(0, 1, 0)
initial_velocity_max = 49.58
angular_velocity_min = 227.67
angular_velocity_max = 453.78
orbit_velocity_min = -0.066
orbit_velocity_max = 0.099
gravity = Vector3(0, -98, 0)
anim_speed_min = 1.0
anim_speed_max = 1.0

[node name="AttackPreview" type="Node2D"]
script = ExtResource("1_bcmmq")

[node name="CurrentTurn" type="PanelContainer" parent="."]
custom_minimum_size = Vector2(0, 130)
offset_right = 40.0
offset_bottom = 40.0
theme = ExtResource("1_nispc")

[node name="VBox" type="VBoxContainer" parent="CurrentTurn"]
layout_mode = 2

[node name="PromptLabel" type="RichTextLabel" parent="CurrentTurn/VBox"]
custom_minimum_size = Vector2(230, 0)
layout_mode = 2
bbcode_enabled = true
text = "Blight Attack!"
fit_content = true

[node name="HBox" type="HBoxContainer" parent="CurrentTurn/VBox"]
layout_mode = 2
alignment = 1

[node name="Mana" type="TextureRect" parent="CurrentTurn/VBox/HBox"]
layout_mode = 2
size_flags_horizontal = 6
texture = ExtResource("2_jpcgr")
stretch_mode = 5

[node name="AmountLabel" type="RichTextLabel" parent="CurrentTurn/VBox/HBox"]
layout_mode = 2
size_flags_horizontal = 2
bbcode_enabled = true
text = "27"
fit_content = true
scroll_active = false
autowrap_mode = 0

[node name="Attack" type="TextureRect" parent="CurrentTurn/VBox/HBox"]
layout_mode = 2
size_flags_horizontal = 6
texture = ExtResource("4_vip4o")
stretch_mode = 5

[node name="Margin" type="MarginContainer" parent="CurrentTurn/VBox"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 17
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 17

[node name="Fortunes" type="HBoxContainer" parent="CurrentTurn/VBox/Margin"]
layout_mode = 2

[node name="FortuneHover" parent="CurrentTurn/VBox/Margin/Fortunes" instance=ExtResource("3_wpjb7")]
visible = false
layout_mode = 2

[node name="AttackParticles" type="GPUParticles2D" parent="CurrentTurn"]
material = SubResource("CanvasItemMaterial_yfc77")
emitting = false
amount = 6
process_material = SubResource("ParticleProcessMaterial_dgk4v")
texture = ExtResource("5_30kqw")
lifetime = 0.5
explosiveness = 0.3

[node name="NextTurns" type="PanelContainer" parent="."]
offset_left = 232.0
offset_right = 272.0
offset_bottom = 40.0

[node name="List" type="VBoxContainer" parent="NextTurns"]
layout_mode = 2

[connection signal="gui_input" from="NextTurns/List" to="." method="_on_list_gui_input"]
[connection signal="mouse_entered" from="NextTurns/List" to="." method="_on_next_turns_mouse_entered"]
[connection signal="mouse_exited" from="NextTurns/List" to="." method="_on_next_turns_mouse_exited"]
